--- a/apps/create-pipeline/package.json
+++ b/apps/create-pipeline/package.json
@@ -14,6 +14,7 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.0",
     "@azure/openai": "^1.0.0-beta.12",
     "@bull-board/api": "^5.21.1",
     "@bull-board/hono": "^5.21.1",
@@ -21,7 +22,6 @@
     "@t3-oss/env-core": "^0.10.1",
     "@usul/db": "workspace:*",
     "@usul/utils": "workspace:*",
-    "aws-sdk": "^2.1574.0",
     "bullmq": "^5.10.3",
     "hono": "^4.5.1",
     "ioredis": "^5.4.1",
