--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "turbo run build",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
+    "start:create-pipeline": "cd apps/create-pipeline && pnpm start",
     "db:push": "turbo -F @usul/db push",
     "db:studio": "turbo -F @usul/db studio",
     "dev": "turbo watch dev",
