--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
     "start:create-pipeline": "cd apps/create-pipeline && pnpm start",
+    "start:ai-pipeline": "cd apps/ai-pipeline && pnpm start",
     "db:push": "turbo -F @usul/db push",
     "db:studio": "turbo -F @usul/db studio",
     "dev": "turbo watch dev",
