update worker config

--- a/apps/ai-pipeline/package.json
+++ b/apps/ai-pipeline/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "pnpm with-env node dist/index.js",
+    "start": "pnpm with-env node dist/src/index.js",
     "dev": "pnpm with-env tsup-node --watch --onSuccess \"node dist/index.js\"",
     "build": "pnpm with-env tsup-node",
     "clean": "rm -rf .turbo node_modules",
