--- a/apps/create-pipeline/package.json
+++ b/apps/create-pipeline/package.json
@@ -19,6 +19,7 @@
     "@bull-board/api": "^5.21.1",
     "@bull-board/hono": "^5.21.1",
     "@hono/node-server": "^1.12.0",
+    "@hono/zod-validator": "^0.4.1",
     "@t3-oss/env-core": "^0.10.1",
     "@usul/db": "workspace:*",
     "@usul/utils": "workspace:*",
