--- a/.github/workflows/main_usul-pipeline.yml
+++ b/.github/workflows/main_usul-pipeline.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy container app to Azure Web App - usul-pipeline
+name: 🚀 Build and Deploy To Azure
 
 on:
   push:
@@ -11,41 +8,41 @@ on:
 
 jobs:
   build:
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_857c33f33ed54c1a81df545f5bd45bb2 }}
+      - name: Log in to registry
+        uses: docker/login-action@v2
+        with:
+          registry: https://index.docker.io/v1/
+          username: ${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}
+          password: ${{ secrets.AzureAppService_ContainerPassword_857c33f33ed54c1a81df545f5bd45bb2 }}
 
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}/ahmedriad1/usul-pipeline:${{ github.sha }}
-        file: ./Dockerfile
+      - name: Build and push container image to registry
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}/usul-pipeline:${{ github.sha }}
+          file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'production'
+      name: "production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'usul-pipeline'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_624b9e10ecad4234a9a8e5b324f0f820 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}/ahmedriad1/usul-pipeline:${{ github.sha }}'
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "usul-pipeline"
+          slot-name: "production"
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_624b9e10ecad4234a9a8e5b324f0f820 }}
+          images: "index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}/usul-pipeline:${{ github.sha }}"
