--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "generate": "prisma generate",
     "dev": "pnpm with-env tsup-node --watch --onSuccess \"node dist/src/index.js\"",
     "build": "pnpm with-env tsup-node",
-    "clean": "rm -rf .turbo node_modules",
+    "clean": "rm -rf node_modules",
     "lint": "eslint",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit",
@@ -52,7 +52,6 @@
     "prisma": "^5.17.0",
     "tsup": "^8.0.2",
     "tsx": "^3.12.7",
-    "turbo": "^2.0.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1"
   },
