--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bullmq": "^5.10.3",
     "hono": "^4.5.1",
     "ioredis": "^5.4.1",
-    "llamaindex": "^0.8.19",
+    "llamaindex": "^0.9.2",
     "lru-cache": "^11.0.0",
     "node-vibrant": "3.2.1-alpha.1",
     "openai": "^4.53.2",
@@ -38,6 +38,7 @@
     "puppeteer-core": "^22.4.0",
     "slugify": "^1.6.6",
     "string-strip-html": "^13.4.8",
+    "tinypool": "^1.0.2",
     "typesense": "^1.7.2",
     "zod": "^3.23.8"
   },
@@ -56,7 +57,7 @@
     "typescript-eslint": "^8.0.1"
   },
   "engines": {
-    "node": ">=20.16.0"
+    "node": ">=22.12"
   },
-  "packageManager": "pnpm@10.2.1"
+  "packageManager": "pnpm@9.15.4"
 }
