--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "pnpm with-env tsup-node",
     "clean": "rm -rf node_modules",
     "lint": "eslint",
-    "format": "prettier --check . --ignore-path ../../.gitignore",
+    "format": "prettier --check . --ignore-path ./.gitignore",
     "typecheck": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --",
+    "with-env": "dotenv -e ./.env --",
     "run:script": "pnpm tsx --env-file=.env"
   },
   "dependencies": {
