--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/inquirer": "^9.0.7",
     "@types/node": "^20.14.9",
     "dotenv-cli": "^7.4.2",
     "eslint": "^9.7.0",
     "eslint-plugin-import": "^2.29.1",
+    "inquirer": "^9.2.15",
     "prettier": "^3.3.3",
     "prisma": "^6.10.1",
     "tsup": "^8.0.2",
