--- a/.github/workflows/main_usul-pipeline-v1.yml
+++ b/.github/workflows/main_usul-pipeline-v1.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           node-version: '22.x'
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.4
+
       - name: npm install, build, and test
         run: |
           npm install
