--- a/.github/workflows/main_usul-pipeline-v1.yml
+++ b/.github/workflows/main_usul-pipeline-v1.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - usul-pipeline-v1
+name: ⬆️ Build and deploy | usul-pipeline-v1
 
 on:
   push:
