--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "pnpm with-env node dist/src/index.js",
+    "start": "dotenv -e ./.env -- node dist/src/index.js",
     "postinstall": "pnpm generate",
     "generate": "prisma generate",
     "dev": "pnpm with-env tsup-node --watch --onSuccess \"node dist/src/index.js\"",
@@ -43,14 +43,14 @@
     "string-strip-html": "^13.4.8",
     "tinypool": "^1.0.2",
     "typesense": "^1.7.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "dotenv-cli": "^7.4.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.14.9",
-    "dotenv-cli": "^7.4.2",
     "eslint": "^9.7.0",
     "eslint-plugin-import": "^2.29.1",
     "inquirer": "^9.2.15",
