--- a/.github/workflows/main_usul-pipeline.yml
+++ b/.github/workflows/main_usul-pipeline.yml
@@ -1,4 +1,7 @@
-name: 🚀 Build and Deploy To Azure
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
+name: Build and deploy container app to Azure Web App - usul-pipeline
 
 on:
   push:
@@ -8,7 +11,9 @@ on:
 
 jobs:
   build:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -16,33 +21,33 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to registry
+      - name: Log in to container registry
         uses: docker/login-action@v2
         with:
-          registry: https://index.docker.io/v1/
-          username: ${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}
-          password: ${{ secrets.AzureAppService_ContainerPassword_857c33f33ed54c1a81df545f5bd45bb2 }}
+          registry: index.docker.io/
+          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_9D039F2AC5D343EB9848F359DF380D8F }}
+          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_740816D152304891BB9E6BB016C706B6 }}
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
-          tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}/usul-pipeline:${{ github.sha }}
+          tags: index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_9D039F2AC5D343EB9848F359DF380D8F }}/usul-pipeline:${{ github.sha }}
           file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
+    
     needs: build
-    environment:
-      name: "production"
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
+      
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "usul-pipeline"
-          slot-name: "production"
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_624b9e10ecad4234a9a8e5b324f0f820 }}
-          images: "index.docker.io/${{ secrets.AzureAppService_ContainerUsername_cae8afa6b4e748e5806a3e21bc5260d8 }}/usul-pipeline:${{ github.sha }}"
+          app-name: 'usul-pipeline'
+          slot-name: 'Production'
+          images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_9D039F2AC5D343EB9848F359DF380D8F }}/usul-pipeline:${{ github.sha }}'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3AC707E9B17D4693BA7817CE686D0F95 }}
