--- a/.github/workflows/main_usul-pipeline.yml
+++ b/.github/workflows/main_usul-pipeline.yml
@@ -22,11 +22,11 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: index.docker.io/
-          username: ${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_9D039F2AC5D343EB9848F359DF380D8F }}
-          password: ${{ secrets.AZUREAPPSERVICE_CONTAINERPASSWORD_740816D152304891BB9E6BB016C706B6 }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push container image to registry
         uses: docker/build-push-action@v3
@@ -50,4 +50,5 @@ jobs:
           app-name: 'usul-pipeline'
           slot-name: 'Production'
           images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_9D039F2AC5D343EB9848F359DF380D8F }}/usul-pipeline:${{ github.sha }}'
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3AC707E9B17D4693BA7817CE686D0F95 }}
