--- a/.github/workflows/main_usul-pipeline.yml
+++ b/.github/workflows/main_usul-pipeline.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to container registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: index.docker.io/
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
@@ -52,3 +51,4 @@ jobs:
           images: 'index.docker.io/${{ secrets.AZUREAPPSERVICE_CONTAINERUSERNAME_9D039F2AC5D343EB9848F359DF380D8F }}/usul-pipeline:${{ github.sha }}'
 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3AC707E9B17D4693BA7817CE686D0F95 }}
+
