add: multi ai-indexer

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ AZURE_LLM_DEPLOYMENT_NAME=
 AZURE_SEARCH_ENDPOINT=
 AZURE_SEARCH_KEY=
 AZURE_SEARCH_INDEX=
+# Comma-separated list for multi-index (e.g. books,books-2) when partition quota exceeded
+AZURE_SEARCH_INDEXES=
 AZURE_KEYWORD_SEARCH_INDEX=
 
 CF_ZONE_ID=
